tests/test_assets/semantic/invalid/mutation/numeric_type_mismatch.cog
test::() -> void {
    small: i32 = 1;
    large: i64 = 2;

    small += large;
}