tests/test_assets/semantic/invalid/mutation/numeric_type_mismatch.expected
semantic error at line 5: compound assignment operands have incompatible numeric types
1 semantic error generated.
